@@ -41,7 +41,7 @@ class Animal < Creature
     after(@jump_delay + (rand(@jump_delay / 2.0) + rand(@jump_delay / 2.0)), name: :jump) { jump }
   end
 
-  def on_wounded
+  def on_wounded(sender, damage)
     # Try to move away from pain.
     if timer_exists? :jump
       stop_timer(:jump)
