@@ -1,0 +1,5 @@
+module Wrath
+  class Metal < Tile
+    SPRITE_POSITION = [5, 1]
+  end
+end
