@@ -1,0 +1,5 @@
+module Wrath
+  class Plastic < Tile
+    SPRITE_POSITION = [6, 1]
+  end
+end
